2015-09-22  Giuseppe Attardi  <attardi@di.unipi.it>

	* deepnl/tagger.pyx (_tag_sequence): lookup whole sentence at once.

	* deepnl/networkseq.pyx (SequenceNetwork._calculate_gradients_sll): added parameter skipErr.

	* deepnl/network.pyx (skipErr): set to 0.01 (was 1e-4). This might impact speed.

	* deepnl/extractors.pyx (normalize): added.

2015-09-21  Giuseppe Attardi  <attardi@di.unipi.it>

	* deepnl/word_dictionary.py (WordDictionary.__setitem__): update
	words as well.

	* deepnl/extractors.pyx (save_vectors): use self.dict.words.

	* deepnl/word_dictionary.py (WordDictionary.__init__): words are
	normalized before insertion.

2015-09-19  Giuseppe Attardi  <attardi@di.unipi.it>

	* deepnl/extractors.pyx (merge): avoid getdefault().

	* deepnl/word_dictionary.py (WordDictionary.__setitem__): added.
	(WordDictionary._normalize): added.

	* bin/dl-ner.py (main): use %(default)s in help string.
	* bin/dl-pos.py (main): idem.

2015-09-18  Giuseppe Attardi  <attardi@di.unipi.it>

	* deepnl/word_dictionary.py (WordDictionary.size): added.

2015-08-24  Giuseppe Attardi  <attardi@di.unipi.it>

	* deepnl/trainer.pyx (Trainer.rain): stop after max_no_progress
	epochs without progress.

	* deepnl/network.pyx: use backward activation function hardath_back.

	* deepnl/math.pyx (hardtanh_back): backward function for hardtanh
	activation layer, that produces gradients of input by multiplying
	by gradiets of output.

	* deepnl/tagger.pyx: cpdef tag_sequence.

	* bin/dl-words.py: commented out profiling.

	* bin/dl-pos.py (main): updated similarly to dl-ner.py.

	* deepnl/reader.py (PosReader.__init__): handle form and tag fields.

	* deepnl/sentiwords.pyx (train): modified implementation of
	AdaGrad.

	* deepnl/extractors.pyx (Converter.upgrade): perform properly
	AdaGrad, using a table of accumulated squares in each extractor.
	Added method clearAdagrad() to initialize them, which should be
	called at the beginning of training.
